[package]
name = 'tokio-project'
version = '0.1.0'
edition = '2021'
[dependencies.tokio]
version = '1'
features = [
    'fs',                   # Async file system access
    'io-util',              # enable tokio_util::io https://docs.rs/tokio-util/latest/tokio_util/io/index.html
    'io-std',               # enable tokio::io
    'macros',               # Tokio macros
    'net',                  # TCP/UDP/Unix bindings
    'parking_lot',          # enable parkin_lot crate https://docs.rs/parking_lot/latest/parking_lot/
    'process',              # spawn child processes
    'rt',                   # single tread scheduler
    'rt-multi-thread',      # multi tread scheduler
    'signal',               # handle system signals
    'sync',                 # enable tokio::sync
    'time',                 # enable tokio::time
    'tracing',              # enable tracing crate https://github.com/tokio-rs/tracing
    'mio',                  # low-level I/O features
]

[dependencies.axum]
version = '0.6.10'

[dependencies.hyper]
version = '1.0.0-rc.3'
features = [
    'client',
    'http1',
]

[dependencies.http-body-util]
version = '0.1.0-rc.2'

[dependencies.bytes]
version = '1.4.0'
