[package]
name = 'example-tokio-single-thread'
version = '1.0.0'
edition = '2021'

[dependencies]

[dependencies.hyper-util]
version = "0.1.3"
features = ['tokio']

[dependencies.tokio]
version = '1'
features = [
    # Async file system access
    # 'fs',

    'io-util', # enable tokio_util::io https://docs.rs/tokio-util/latest/tokio_util/io/index.html
    'io-std',  # enable tokio::io
    'macros',  # Tokio macros
    'net',     # TCP/UDP/Unix bindings

    # Enable crate (https://docs.rs/parking_lot).
    # Faster and smaller implementations of Mutex, RwLock, Condvar and Once
    # 'parking_lot',


    # spawn child processes
    'process',

    # single tread scheduler
    'rt',

    # multi tread scheduler
    # 'rt-multi-thread',

    # handle system signals
    # 'signal',

    # Enable tokio::sync
    # Synchronization primitives for use in asynchronous contexts.
    # 
    # https://docs.rs/tokio/latest/tokio/sync/index.html
    'sync',

    'time', # enable tokio::time

    # Enable tracing: https://github.com/tokio-rs/tracing
    'tracing',

    'mio', # low-level I/O features
]

[dependencies.hyper]
version = '1.1.0'
features = [
    # Enables the `client` module
    # https://docs.rs/hyper/latest/hyper/client/index.html
    'client',

    # Enables the `server` module.
    # https://docs.rs/hyper/latest/hyper/server/index.html
    'server',

    # Feature server requires http1 or http2
    # https://docs.rs/hyper/latest/hyper/server/index.html
    'http1',
    'http2',
]

# https://docs.rs/http-body-util
[dependencies.http-body-util]
version = '0.1.0'

# Bytes is an efficient container for storing and operating on
# contiguous slices of memory.
[dependencies.bytes]
version = '1.4.0'

# https://docs.rs/pretty_env_logger
# A logger configured via an environment variable which
# writes to standard error with nice colored output for
# log levels.
# This crate uses env_logger internally,
[dependencies.pretty_env_logger]
version = "0.5.0"

# https://docs.rs/log
[dependencies.log]
version = "0.4"

# https://docs.rs/url
[dependencies.url]
version = "2.3"

# https://docs.rs/http-body
[dependencies.http-body]
version = "1.0"
